# ByteFlow

./: .gitignore  README.md  index.html  pyproject.toml  script.js  style.css
baseline/: byt5_mini_en_baseline.py  byt5_small_en_baseline.py  run_byt5_en.slurm
baseline-pcaptok-data/: byt5_mini_en_bytes_baseline.py  hybrid_byt5_tokenizer.py
baseline-pcaptok-data/tokenizer/: hybrid_byt5_tokenizer.py  pcap_tokenizer.py
preprocessing/flow_split/: Cargo.toml
preprocessing/flow_split/src/: main.rs
preprocessing/task_creation/: Cargo.toml
preprocessing/task_creation/src/: main.rs
src/: byteflow.py  training.py
src/baseline/: baseline.py
src/byteflow/: byteflow.py  run_byteflow.slurm
src/byteflow/tokenizer/: tokenizer.py
src/tokenizer/: hybrid_tokenizer.py
