[package]
name = "pcap_flow_splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
clap = { version = "4.5.37", features = ["derive"] }
pcap      = "2.2.0"
pnet_packet = "0.35.0"
indicatif   = "0.17.11"
rayon       = "1.10.0"
