[package]
name = "task_creation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "2.2.0"
pnet = "0.35.0"
serde_json = "1.0.140"
rand = "0.9.1"
serde = { version = "1.0.105", features = ["derive"] }
indicatif = "0.17.11"
rayon = "1.10.0"
num_cpus = "1.16.0"